# Besra-Killbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
ci/: github-actions.yml
docker/: Dockerfile  docker-compose.yml
scripts/: run_auth.sh  run_bot.sh
src/: bot.py  config.py
src/botui/: colors.py  commands.py  embeds.py  test_runner.py
src/core/: models.py  prices_cache.py  pricing.py  processor.py  store.py  utils.py
src/esi/: __init__.py  auth.py  client.py  killmails.py  market.py  universe.py
src/scheduler/: cleanup_policy.py  loop.py
src/zkb/: poster.py  runner.py  zkill.py
tests/fixtures/: killmail_simple.json  killmail_with_items.json  market_history_full.json  market_history_short.json  universe_names_batch.json
tests/integration/: test_discord_post_mocked.py  test_esi_endpoints_mocked.py
tests/unit/: test_embeds_layout5.py  test_epoch_format.py  test_killmail_filtering.py  test_market_cache.py  test_pricing.py  test_scheduler_cleanup.py
